--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,74 @@
+# This workflow builds and deploys marimo notebooks to GitHub Pages
+# It runs automatically when changes are pushed to the main branch or can be triggered manually
+
 name: Deploy to GitHub Pages
 
+# Defines when the workflow will run
 on:
   push:
-    branches: ['main']
-  workflow_dispatch:
+    branches: ['main']  # Trigger on pushes to main branch
+  workflow_dispatch:    # Allow manual triggering from the GitHub UI
 
+# Concurrency settings to manage multiple workflow runs
 concurrency:
-  group: 'pages'
-  cancel-in-progress: false
+  group: 'pages'             # Only one workflow in the 'pages' group can run at a time
+  cancel-in-progress: false  # Don't cancel in-progress runs when a new one is triggered
 
+# Environment variables used by the workflow
 env:
-  UV_SYSTEM_PYTHON: 1
+  UV_SYSTEM_PYTHON: 1   # Use system Python with uv package manager
 
 jobs:
+  # The build job exports marimo notebooks to static HTML/WebAssembly
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
     steps:
+      # Check out the repository code
       - uses: actions/checkout@v4
 
+      # Install uv package manager for faster Python package installation
       - name: 🚀 Install uv
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v6
 
+      # Set up Python environment
       - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: 3.12  # Use Python 3.12 for the build
 
+      # Install marimo and other required dependencies
       - name: 📦 Install dependencies
         run: |
           uv pip install marimo
 
+      # Run the build script to export notebooks to WebAssembly
       - name: 🛠️ Export notebooks
         run: |
-          python scripts/build.py
+          python .github/scripts/build.py  # This script exports all notebooks to the _site directory
 
+      # Upload the generated site as an artifact for the deploy job
       - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: _site
+          path: _site  # Directory containing the built site
 
+  # The deploy job publishes the built site to GitHub Pages
   deploy:
-    needs: build
+    needs: build  # This job depends on the build job completing successfully
 
+    # Required permissions for the GitHub Pages deployment
     permissions:
-      pages: write
-      id-token: write
+      pages: write      # Permission to deploy to Pages
+      id-token: write   # Permission to verify the deployment
 
+    # Configure the deployment environment
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+      name: github-pages                             # Deploy to the github-pages environment
+      url: ${{ steps.deployment.outputs.page_url }}  # Use the URL from the deployment step
+
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
     steps:
+      # Deploy the site to GitHub Pages using the official action
       - name: 🚀 Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        id: deployment                 # ID used to reference this step's outputs
+        uses: actions/deploy-pages@v4  # GitHub's official Pages deployment action
