--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,16 +30,17 @@ jobs:
       - name: 🚀 Install uv
         uses: astral-sh/setup-uv@v6
 
+      # obsolete as done in the setup-uv step
       # Set up Python environment
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12  # Use Python 3.12 for the build
+      #- name: 🐍 Set up Python
+      #  uses: actions/setup-python@v5
+      #  with:
+      #    python-version: 3.12  # Use Python 3.12 for the build
 
       # Install marimo and other required dependencies
-      - name: 📦 Install dependencies
-        run: |
-          uv pip install marimo
+      # - name: 📦 Install dependencies
+      #   run: |
+      #      uv pip install marimo
 
       # Run the build script to export notebooks to WebAssembly
       - name: 🛠️ Export notebooks
