--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,12 @@ jobs:
           
 
       # Run the build script to export notebooks to WebAssembly
-      #- name: 🛠️ Export notebooks
-      #  run: |
+      - name: 🛠️ Export notebooks
+        run: |
+          tree _site
+          tree _site/notebooks
+          tree _site/apps
+          
       #    python .github/scripts/build.py  # This script exports all notebooks to the _site directory
 
       # Upload the generated site as an artifact for the deploy job
