Modern marimo and a fancy webpage (#8)
* Penguins (#4)

* Example with Pandas

* Pandas example

* works for pandas

* ignore __marimo__

* Update Makefile

* Update penguins.py

* Update pandas_penguins.py

* Update fibonacci.py

* Update charts.py

* Update Makefile

* Update deploy.yml

* notebooks with preamble

* deploy workflow

* Update deploy.yml

* Update deploy.yml

* Update deploy.yml

* subfolders of notebooks

* remove requirements

* site/notebooks

* site/notebooks

* display webpage address

* display webpage address

* Update deploy.yml

* display webpage address

* display webpage address

* display webpage address

* display webpage address

* display webpage address

* correcting misleading step title

* webpage template

* webpage template

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,31 +26,17 @@ jobs:
       # Check out the repository code
       - uses: actions/checkout@v4
 
-      # Install uv package manager for faster Python package installation
-      - name: 🚀 Install uv
-        uses: astral-sh/setup-uv@v6
-
-      # Set up Python environment
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12  # Use Python 3.12 for the build
-
-      # Install marimo and other required dependencies
-      - name: 📦 Install dependencies
+      - name: Run the dryrun command
         run: |
-          uv pip install marimo
-
-      # Run the build script to export notebooks to WebAssembly
-      - name: 🛠️ Export notebooks
-        run: |
-          python .github/scripts/build.py  # This script exports all notebooks to the _site directory
+          make dryrun
 
       # Upload the generated site as an artifact for the deploy job
       - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: _site  # Directory containing the built site
+
+
 
   # The deploy job publishes the built site to GitHub Pages
   deploy:
@@ -72,3 +58,7 @@ jobs:
       - name: 🚀 Deploy to GitHub Pages
         id: deployment                 # ID used to reference this step's outputs
         uses: actions/deploy-pages@v4  # GitHub's official Pages deployment action
+
+      - name: Display address
+        run: |
+          echo ${{ steps.deployment.outputs.page_url }}
