--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,24 +24,11 @@ jobs:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner
     steps:
       - uses: tschm/marimograd/actions/export@main
+        with:
+          template: 'templates/index.html.j2'
+        # declare which template
+        # delcare folder names
 
-      # Check out the repository code
-      #- uses: actions/checkout@v4
-
-      # Install uv package manager for faster Python package installation
-      #- name: 🚀 Install uv
-      #  uses: astral-sh/setup-uv@v6
-
-      # Run the build script to export notebooks to WebAssembly
-      #- name: 🛠️ Export notebooks
-      #  run: |
-      #    uvx marimograd
-
-      # Upload the generated site as an artifact for the deploy job
-      #- name: 📤 Upload artifact
-      #  uses: actions/upload-pages-artifact@v3
-      #  with:
-      #    path: _site  # Directory containing the built site
 
   # The deploy job publishes the built site to GitHub Pages
   deploy:
