build with template

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner
     steps:
       - uses: tschm/marimograd/actions/export@main
-        with:
-          template: 'templates/index.html.j2'
+        #with:
+        #  template: 'templates/index.html.j2'
         # declare which template
         # delcare folder names
 
