--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,17 @@ on:
 jobs:
   # The build job exports marimo notebooks to static HTML/WebAssembly
   # This job handles the entire process from checkout to deployment
+  
   build:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for better compatibility and security
+
+    environment:
+      name: github-pages
+
+    permissions:
+      pages: write
+      id-token: write
+    
     steps:
       # Check out the repository code to access notebooks and configuration
       # This step uses GitHub's official checkout action to clone the repository
@@ -33,27 +42,6 @@ jobs:
 
           template: 'templates/tailwind.html.j2'  # Custom template for the index page using Tailwind CSS
 
-  book:
-    runs-on: ubuntu-latest
-    needs: build
-
-    environment:
-      name: github-pages
-
-    permissions:
-      pages: write
-      id-token: write
-
-    #steps:
-    #  - uses: tschm/cradle/actions/book@v0.1.72
-
-    steps:
-      # Download all artifacts from previous jobs
-      # This collects the outputs from both the jupyter and marimo jobs
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
 
       - name: Inspect artifacts folder
         shell: bash
@@ -66,7 +54,7 @@ jobs:
         id: upload
         uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
         with:
-          path: artifacts/  # Path to the directory containing all artifacts
+          path: artifacts/marimushka  # Path to the directory containing all artifacts
 
       - name: Deploy to GitHub Pages
         id: deployment
